src/components/input/themes/input.base.scss
@use 'styles/common/component';
@use 'styles/utilities' as *;

%starfix {
    display: flex;
    align-items: center;
}

:host {
    position: relative;
    display: block;
    font-family: var(--ig-font-family);
    outline-style: none;
}

::slotted(igc-icon) {
    --component-size: var(--input-size) !important;
}

[part='label'] {
    display: block;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

[part~='input'] {
    width: 100%;
    border: none;
    outline-style: none;
    font-family: var(--ig-font-family);
    z-index: 1;
}

[part^='container'] {
    position: relative;
    display: grid;
}

[part='prefix'],
[part='suffix'] {
    display: none;
    overflow: hidden;
}

[part~='prefixed'] {
    [part='prefix'] {
        @extend %starfix;
    }
}

[part~='suffixed'] {
    [part='suffix'] {
        @extend %starfix;
    }
}

:host([required]) {
    [part='label']::after {
        content: '*';
    }
}

:host([disabled]) {
    pointer-events: none;
}

